<resources>
    <string name="app_name">musiclips</string>
    <string name="description">Listen and share music with everyone.</string>

    <string name="or">or</string>
    <string name="existing_user">Existing user?</string>
    <string name="login_underline"><u>Log in</u></string>
    <string name="login">Log in</string>
    <string name="logout_underline"><u>Log out</u></string>
    <string name="no_account_yet">No account yet?</string>
    <string name="sign_up_underline"><u>Sign up</u></string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="login_with_google">Log in with Google</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="display_name">Display name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="we_couldnt_log_you_in">We couldn\'t log you in.</string>
    <string name="try_sign_in_again_later">Try sign in again later.</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="enter_a_valid_email_address">Enter a valid email address.</string>
    <string name="the_password_length_error">The password must be at least 6 characters.</string>
    <string name="the_display_name_length_error">The display name must be at least 3 characters.</string>
    <string name="the_confirm_password_error">The password doesn\'t match.</string>
    <string name="the_email_taken_error">The email address is already in use by another account.</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="my_albums">My Albums</string>
    <string name="my_songs">My Songs</string>
    <string name="change_display_name">Change Display name</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="change_avatar_description">Change your profile avatar</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="upload_song">Upload song</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="new_song_name">New song name</string>
    <string name="change_icon">Change Icon</string>
    <string name="change_song_name">Change Song Name</string>
    <string name="confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="user_profile">User Profile</string>
    <string name="songs">Songs</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="my_profile">My Profile</string>
    <string name="loading">Loading</string>
    <string name="recommended">Recommended</string>
    <string name="new_songs">New Songs</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="manage">Manage</string>
    <string name="unfollow">Unfollow</string>
    <string name="search">Search</string>
    <string name="accounts">Accounts</string>
    <string name="views">Views</string>
    <string name="ai_karaoke">Karaoke by AI</string>

</resources>