<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <ImageButton android:id="@+id/button_Back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorBackground"
            android:scaleType="fitCenter"
            android:layout_marginStart="15dp"
            android:padding="6dp"
            android:src="@drawable/back"
            android:contentDescription="@null" />

        <!-- Description -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="55dp"
            android:text="@string/enter_your_details" />
    </LinearLayout>

    <EditText android:id="@+id/editText_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="-7dp"
        android:padding="18dp"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        app:backgroundTint="@color/colorText"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHint"
        android:text="" />

    <TextView android:id="@+id/textView_EmailWarn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorRed"
        android:textSize="13sp" />

    <EditText android:id="@+id/editText_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="-7dp"
        android:padding="18dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        app:backgroundTint="@color/colorText"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHint"
        android:text="" />

    <TextView android:id="@+id/textView_PasswordWarn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorRed"
        android:textSize="13sp"/>

    <Button android:id="@+id/button_Login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/border_round_full"
        android:layout_marginTop="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="26dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:clickable="true"
        android:focusable="true" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:padding="10dp" />

        <!-- Google Button -->
        <Button android:id="@+id/button_Google"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/border_round_full"
            android:paddingStart="16dp"
            android:paddingEnd="26dp"
            android:drawableStart="@drawable/google_icon"
            android:text="@string/login_with_google"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>