<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText android:id="@+id/editText_Search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:paddingStart="12dp"
            android:paddingEnd="18dp"
            android:drawableStart="@drawable/search_sm"
            android:drawablePadding="8dp"
            android:hint="@string/search"
            app:backgroundTint="@color/colorText"
            android:inputType="text"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:text=""
            android:autofillHints="@string/search" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout android:id="@+id/button_ManageFollowers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
                    android:background="?attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accounts"/>

                </LinearLayout>

                <View android:id="@+id/view_Users_Highlight"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorGray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout android:id="@+id/button_ManageFollowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
                    android:background="?attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/songs"/>

                </LinearLayout>

                <View android:id="@+id/view_Songs_Highlight"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorText"/>

            </LinearLayout>
        </LinearLayout>

        <ProgressBar android:id="@+id/progressBar_Loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_marginTop="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center" />

        <ScrollView android:id="@+id/scrollView_Users"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_Users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </ScrollView>

        <ScrollView android:id="@+id/scrollView_Songs"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_Songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </ScrollView>
    </LinearLayout>
</FrameLayout>